--- a/src/main/resources/Loader/button.css
+++ b/src/main/resources/Loader/button.css
@@ -6,3 +6,11 @@
 .button:hover{
     -fx-text-fill: #01ffeb;
 }
+
+.text-input {
+    -fx-text-fill: white;
+    -fx-background-color: black;
+    -fx-border-color: white;
+    -fx-border-width: 1px;
+    -fx-border-radius: 10px;
+}
